--- a/gai-app/src/Style/ReusableComponents.scss
+++ b/gai-app/src/Style/ReusableComponents.scss
@@ -1,8 +1,13 @@
-//colors and fonts
-
+//fonts
 $rokkitt: 'Rokkitt', serif;
 $cinzel: 'Cinzel', serif;
 $alef: 'Alef', sans-serif;
 $gentium: 'Gentium Book Basic', serif;
 $ibm: 'IBM Plex Mono', monospace;
 $cousine: 'Cousine', monospace;
+
+//colors
+
+$blue-text: rgb(3, 22, 56);
+$blue-div-color:rgba(141, 153, 189, 0.548);
+$blue-border:rgb(17, 91, 175);
