--- a/gai-app/src/Style/App.scss
+++ b/gai-app/src/Style/App.scss
@@ -1,4 +1,4 @@
 body{
-    background-image: url("../img/background.jpg");
+    background-image: url("../img/background2.jpg");
     background-size: cover;
 }
