--- a/gai-app/src/Style/ReusableComponents.scss
+++ b/gai-app/src/Style/ReusableComponents.scss
@@ -14,7 +14,21 @@ $blue-border:rgb(17, 91, 175);
 
 //@mixins
 
-@mixin display-main-par(){
+@mixin display-flex(){
     display:flex;
     flex-wrap: wrap;
+}
+
+@mixin p-landing-page-text(){
+text-align: center;
+font-family: $gentium;
+font-size: 25px;
+font-weight: 200;
+color:$blue-text;
+}
+
+@mixin  title() {
+    font-size: 35px;
+font-family: $gentium;
+color:$blue-text;
 }
