--- a/gai-app/src/Style/Home.scss
+++ b/gai-app/src/Style/Home.scss
@@ -14,6 +14,7 @@ margin: 55px;
     padding: 15px;
 
 }
+
 #title-landing-page{
 @include title();
 }
@@ -55,17 +56,33 @@ color:$blue-text;
  height: auto;
  margin-right: 50px;
 }
+
 #author-contacts-ul{
  list-style:none;
  @include display-flex();
  flex-direction: row;
+
 }
+#hand-img-contacts{
+    @include display-flex();
+    flex-direction: row;
+
+}
+#hand-img{
+    width: 400px;
+    height: 150px;
+    margin-left: 300px;
+    margin-top: -80px;
+    }
+
 .author-contacts-li{
 margin-right:55px;
 }
 .author-contacts-links{
     color:$blue-text;
 }
+
+
 
 .author-contacts-links:hover{
 color: rgb(220, 232, 255);
@@ -74,3 +91,4 @@ color: rgb(220, 232, 255);
 #data-and-society-link:hover{
     color: rgb(220, 232, 255);
 }
+
