--- a/gai-app/src/Style/ReusableComponents.scss
+++ b/gai-app/src/Style/ReusableComponents.scss
@@ -7,7 +7,7 @@ $ibm: 'IBM Plex Mono', monospace;
 $cousine: 'Cousine', monospace;
 
 //colors
-
+$hover-links:rgb(150, 231, 245);
 $blue-text: rgb(3, 22, 56);
 $blue-div-color:rgba(141, 153, 189, 0.548);
 $blue-border:rgb(17, 91, 175);
